client feedback update index

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <div class="text-center mb-16">
                     <div class="inline-flex items-center space-x-2 bg-white/20 backdrop-blur-md px-6 py-3 rounded-full mb-8 border border-white/30">
                         <div class="w-2 h-2 bg-green-400 rounded-full animate-pulse"></div>
-                        <span class="text-white font-medium text-sm">76 Years of Aviation Excellence</span>
+                        <span class="text-white font-medium text-sm">Recognized Worldwide Since 1948 • 76 Years of Aviation Excellence</span>
                     </div>
 
                     <h1 class="text-6xl md:text-8xl lg:text-9xl font-black text-white mb-8 leading-none tracking-tight">
@@ -172,22 +172,36 @@
                         <span class="text-4xl md:text-6xl lg:text-6xl inline-block mt-4 leading-relaxed">International Airlines Technical Pool</span>
                     </h1>
 
-                    <p class="text-xl md:text-2xl text-white/90 max-w-3xl mx-auto mb-12 leading-relaxed font-light">
-                        Sharing Technical Resources to 
-                        
+                    <p class="text-2xl md:text-3xl text-white/90 max-w-4xl mx-auto mb-8 leading-relaxed font-medium">
+                        Bringing Airlines Together for Win-Win Collaboration
                     </p>
-                    <div class="columns-2 lg:px-[25%] gap-4 pb-12 text-left  text-white/90 ">
-                        <div>
-                            Generate economic savings
+                    <p class="text-lg md:text-xl text-white/80 max-w-3xl mx-auto mb-12 leading-relaxed">
+                        Maximizing efficiency and expanding global reach through expert technical support and AOG solutions
+                    </p>
+                    <div class="grid grid-cols-2 md:grid-cols-4 gap-6 max-w-5xl mx-auto pb-12">
+                        <div class="text-center">
+                            <div class="w-16 h-16 mx-auto bg-white/20 backdrop-blur-md rounded-2xl flex items-center justify-center mb-3">
+                                <i class="fas fa-handshake text-white text-2xl"></i>
+                            </div>
+                            <p class="text-white font-semibold">Global Collaboration</p>
                         </div>
-                        <div>
-                            Support aog situations
+                        <div class="text-center">
+                            <div class="w-16 h-16 mx-auto bg-white/20 backdrop-blur-md rounded-2xl flex items-center justify-center mb-3">
+                                <i class="fas fa-wrench text-white text-2xl"></i>
+                            </div>
+                            <p class="text-white font-semibold">Technical Expertise</p>
                         </div>
-                        <div>
-                            On time dispatch reliability
+                        <div class="text-center">
+                            <div class="w-16 h-16 mx-auto bg-white/20 backdrop-blur-md rounded-2xl flex items-center justify-center mb-3">
+                                <i class="fas fa-plane-departure text-white text-2xl"></i>
+                            </div>
+                            <p class="text-white font-semibold">AOG Support</p>
                         </div>
-                        <div>
-                            Operational safety
+                        <div class="text-center">
+                            <div class="w-16 h-16 mx-auto bg-white/20 backdrop-blur-md rounded-2xl flex items-center justify-center mb-3">
+                                <i class="fas fa-globe text-white text-2xl"></i>
+                            </div>
+                            <p class="text-white font-semibold">Worldwide Coverage</p>
                         </div>
                     </div>
 
@@ -205,84 +219,9 @@
 
                 <!-- Bento Grid - Event Cards -->
                 <div class="grid md:grid-cols-3 lg:grid-cols-12 gap-6 max-w-7xl mx-auto">
-                    <!-- Featured Upcoming Event - Takes 2/3 width -->
-                    <div class="lg:col-span-7 boarding-pass shadow-2xl rounded-2xl group hover:shadow-[#0079c2]/30 transition-all duration-500 hover:-translate-y-2">
-                        <div class="relative p-8 pr-[28%]">
-                            <!-- Status Badge -->
-                            <div class="inline-flex items-center space-x-2 bg-gradient-to-r from-red-500 to-orange-500 px-4 py-2 rounded-full badge-pulse mb-6">
-                                <i class="fas fa-star text-white text-xs"></i>
-                                <span class="text-white font-bold text-xs uppercase tracking-wider">Upcoming</span>
-                            </div>
-
-                            <!-- Event Title -->
-                            <div class="mb-6">
-                                <div class="text-sm text-gray-500 mb-2 uppercase tracking-wider">133rd IATP Conference</div>
-                                <h3 class="text-5xl font-black text-gray-900 mb-2">Malta</h3>
-                                <p class="text-lg text-gray-600">St. Julian's, Malta</p>
-                            </div>
-
-                            <!-- Event Details -->
-                            <div class="space-y-4 mb-6">
-                                <div class="flex items-center space-x-3">
-                                    <div class="w-10 h-10 bg-blue-50 rounded-xl flex items-center justify-center flex-shrink-0">
-                                        <i class="fas fa-calendar text-[#0079c2]"></i>
-                                    </div>
-                                    <div>
-                                        <div class="text-xs text-gray-500 uppercase tracking-wider">Dates</div>
-                                        <div class="font-bold text-gray-900">March 7-11, 2026</div>
-                                    </div>
-                                </div>
-                                <div class="flex items-center space-x-3">
-                                    <div class="w-10 h-10 bg-blue-50 rounded-xl flex items-center justify-center flex-shrink-0">
-                                        <i class="fas fa-users text-[#0079c2]"></i>
-                                    </div>
-                                    <div>
-                                        <div class="text-xs text-gray-500 uppercase tracking-wider">Expected</div>
-                                        <div class="font-bold text-gray-900">500+ delegates</div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!-- Divider -->
-                            <div class="border-t-2 border-dashed border-gray-300 my-6"></div>
-
-                            <!-- Countdown -->
-                            <div class="bg-gradient-to-r from-[#0079c2]/10 to-[#337ab7]/10 rounded-xl p-4 mb-6">
-                                <div class="text-xs text-gray-600 uppercase tracking-wider mb-3 text-center font-semibold">Countdown to Event</div>
-                                <div class="grid grid-cols-4 gap-2">
-                                    <div class="text-center">
-                                        <div class="text-2xl font-black text-gradient counter" data-target="458" id="days">0</div>
-                                        <div class="text-xs text-gray-500 uppercase tracking-wider mt-1">Days</div>
-                                    </div>
-                                    <div class="text-center">
-                                        <div class="text-2xl font-black text-gradient" id="hours">0</div>
-                                        <div class="text-xs text-gray-500 uppercase tracking-wider mt-1">Hrs</div>
-                                    </div>
-                                    <div class="text-center">
-                                        <div class="text-2xl font-black text-gradient" id="minutes">0</div>
-                                        <div class="text-xs text-gray-500 uppercase tracking-wider mt-1">Min</div>
-                                    </div>
-                                    <div class="text-center">
-                                        <div class="text-2xl font-black text-gradient" id="seconds">0</div>
-                                        <div class="text-xs text-gray-500 uppercase tracking-wider mt-1">Sec</div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <button class="w-full py-4 bg-gradient-to-r from-[#0079c2] to-[#337ab7] text-white rounded-xl font-bold text-base hover:shadow-lg hover:shadow-[#0079c2]/50 transition-all group/btn flex items-center justify-center space-x-2">
-                                <span>Register Now</span>
-                                <i class="fas fa-arrow-right group-hover/btn:translate-x-2 transition-transform"></i>
-                            </button>
-                        </div>
-
-                        <!-- Boarding Pass Stub -->
-                        <div class="boarding-pass-stub">
-                            <div class="text-center">
-                                <div class="text-xs text-gray-400 uppercase tracking-widest mb-3">Conference</div>
-                                <div class="text-5xl font-black text-gradient mb-3">#133</div>
-                                <div class="text-xs text-gray-500 font-semibold">2026</div>
-                            </div>
-                        </div>
+                    <!-- Featured Banner - Takes 2/3 width -->
+                    <div class="lg:col-span-7 shadow-2xl rounded-2xl overflow-hidden group hover:shadow-[#0079c2]/30 transition-all duration-500 hover:-translate-y-2">
+                        <img src="img/homepage_banner.png" alt="IATP Conference" class="w-full h-full object-cover">
                     </div>
 
                     <!-- Past Events - Vertical Stack -->
@@ -372,14 +311,14 @@
         <div class="max-w-7xl mx-auto px-6">
             <div class="text-center mb-20 reveal-up">
                 <div class="inline-block px-6 py-2 bg-blue-50 text-blue-600 rounded-full text-sm font-bold mb-6">
-                    WHAT WE OFFER
+                    EXPERT SOLUTIONS
                 </div>
                 <h2 class="text-5xl md:text-7xl font-black text-gray-900 mb-6 leading-tight">
                     Four Pillars of<br/>
-                    <span class="text-gradient">Excellence</span>
+                    <span class="text-gradient">Technical Excellence</span>
                 </h2>
-                <p class="text-xl text-gray-600 max-w-2xl mx-auto">
-                    Comprehensive solutions designed to keep your fleet operational 24/7/365
+                <p class="text-xl text-gray-600 max-w-3xl mx-auto">
+                    Trusted by 130+ airlines worldwide for comprehensive technical support and AOG solutions that keep fleets operational 24/7/365
                 </p>
             </div>
 
@@ -392,7 +331,7 @@
                     </div>
                     <h3 class="text-4xl font-black text-gray-900 mb-6">Parts Pooling</h3>
                     <p class="text-lg text-gray-600 mb-8 leading-relaxed">
-                        Access 4,000+ spare parts across 890 global stations. Immediate availability when you need it most, reducing downtime and operational costs dramatically.
+                        Access to 4,000+ spare parts across 890 global stations. Expert AOG support with immediate availability, reducing downtime and maximizing operational efficiency for airlines worldwide.
                     </p>
 
                     <div class="space-y-4 mb-8">
@@ -475,14 +414,14 @@
                 <!-- Content -->
                 <div class="reveal-up">
                     <div class="inline-block px-6 py-2 bg-blue-50 text-blue-600 rounded-full text-sm font-bold mb-6">
-                        EXCLUSIVE ACCESS
+                        MEMBER PLATFORM
                     </div>
                     <h2 class="text-5xl md:text-6xl font-black text-gray-900 mb-8 leading-tight">
-                        Your Digital<br/>
-                        <span class="text-gradient">Command Center</span>
+                        Your Expert<br/>
+                        <span class="text-gradient">Technical Hub</span>
                     </h2>
                     <p class="text-xl text-gray-600 mb-12 leading-relaxed">
-                        Access the world's most powerful aviation technical network from anywhere, anytime.
+                        Access comprehensive technical resources, real-time AOG support, and global airline partnerships from anywhere, anytime.
                     </p>
 
                     <div class="space-y-6">
@@ -628,13 +567,13 @@
         <div class="max-w-7xl mx-auto px-6">
             <div class="text-center mb-20 reveal-up">
                 <div class="inline-block px-6 py-2 bg-blue-100 text-blue-600 rounded-full text-sm font-bold mb-6">
-                    TRUSTED WORLDWIDE
+                    WORLDWIDE RECOGNITION
                 </div>
                 <h2 class="text-5xl md:text-7xl font-black text-gray-900 mb-6">
-                    Global <span class="text-gradient">Network</span>
+                    Global <span class="text-gradient">Aviation Network</span>
                 </h2>
-                <p class="text-xl text-gray-600 max-w-2xl mx-auto">
-                    Connected through decades of trust, expertise, and collaboration
+                <p class="text-xl text-gray-600 max-w-3xl mx-auto">
+                    Recognized by the aviation industry worldwide. Connected through decades of trust, technical expertise, and collaborative partnerships.
                 </p>
             </div>
 
@@ -676,12 +615,12 @@
 
         <div class="max-w-5xl mx-auto px-6 text-center relative z-10">
             <h2 class="text-5xl md:text-7xl font-black text-white mb-8 leading-tight">
-                Join the Elite<br/>
-                Aviation Network
+                Join the World's Most<br/>
+                Trusted Aviation Network
             </h2>
             <p class="text-2xl text-blue-50 mb-12 leading-relaxed">
-                76 years of excellence. 890 stations. 175+ partners.<br/>
-                One mission: keeping your fleet operational.
+                Recognized worldwide for 76 years of technical excellence.<br/>
+                890 stations. 175+ partners. Delivering expert AOG support and collaboration across the globe.
             </p>
 
             <div class="flex flex-col sm:flex-row items-center justify-center gap-6 mb-12">
@@ -717,11 +656,15 @@
             <div class="grid md:grid-cols-4 gap-12 mb-12">
                 <div>
                     <div class="flex items-center space-x-3 mb-6">
-                        <img src="img/IATP-logo.png" alt="IATP Logo" class="h-12 w-auto   ">
+                        <img src="img/IATP-logo.png" alt="IATP Logo" class="h-12 w-auto">
                     </div>
-                    <p class="text-gray-400 leading-relaxed">
-                        The world's leading aviation technical resource sharing platform since 1948.
+                    <p class="text-gray-400 leading-relaxed mb-4">
+                        Recognized worldwide as the aviation industry's trusted expert in technical collaboration and AOG support since 1948.
                     </p>
+                    <div class="flex items-center space-x-2 text-gray-500 text-sm">
+                        <i class="fas fa-shield-alt text-blue-500"></i>
+                        <span>Trusted by 130+ Airlines Globally</span>
+                    </div>
                 </div>
 
                 <div>
@@ -747,16 +690,11 @@
                 <div>
                     <h4 class="font-bold text-lg mb-6">Connect</h4>
                     <div class="flex space-x-4">
-                        <a href="#" class="w-12 h-12 bg-gray-800 rounded-xl flex items-center justify-center hover:bg-[#0079c2] transition-all">
-                            <i class="fab fa-linkedin"></i>
-                        </a>
-                        <a href="#" class="w-12 h-12 bg-gray-800 rounded-xl flex items-center justify-center hover:bg-[#0079c2] transition-all">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a href="#" class="w-12 h-12 bg-gray-800 rounded-xl flex items-center justify-center hover:bg-[#0079c2] transition-all">
-                            <i class="fab fa-youtube"></i>
+                        <a href="#" class="w-12 h-12 bg-gray-800 rounded-xl flex items-center justify-center hover:bg-[#0079c2] transition-all group">
+                            <i class="fab fa-linkedin text-xl group-hover:scale-110 transition-transform"></i>
                         </a>
                     </div>
+                    <p class="text-gray-400 text-sm mt-4">Follow us on LinkedIn for industry insights and updates</p>
                 </div>
             </div>
 
