--- a/pionairs.html
+++ b/pionairs.html
@@ -138,25 +138,30 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="relative pt-32 pb-20 bg-gradient-to-br from-[#0079c2] to-[#337ab7] overflow-hidden">
+    <section class="relative pt-32 pb-24 bg-gradient-to-br from-[#0079c2] to-[#337ab7] overflow-hidden">
         <div class="absolute inset-0 opacity-10">
             <div class="absolute top-0 right-0 w-96 h-96 bg-white rounded-full -mr-48 -mt-48"></div>
             <div class="absolute bottom-0 left-0 w-96 h-96 bg-white rounded-full -ml-48 -mb-48"></div>
+            <div class="absolute top-1/2 left-1/4 w-64 h-64 bg-white rounded-full -ml-32 -mt-32"></div>
         </div>
 
         <div class="max-w-7xl mx-auto px-6 relative z-10">
             <div class="text-center">
                 <div class="inline-flex items-center space-x-2 bg-white/20 backdrop-blur-md px-6 py-3 rounded-full mb-8 border border-white/30">
                     <i class="fas fa-users text-white"></i>
-                    <span class="text-white font-medium text-sm">Since 1984</span>
+                    <span class="text-white font-medium text-sm">Established 1984 • Celebrating 40 Years</span>
                 </div>
-                <h1 class="text-5xl md:text-7xl font-black text-white mb-6 leading-tight">
+                <h1 class="text-5xl md:text-7xl font-black text-white mb-8 leading-tight">
                     IATP PIONAIRS Association
                 </h1>
-                <p class="text-xl md:text-2xl text-white/90 max-w-3xl mx-auto leading-relaxed">
+                <p class="text-2xl md:text-3xl text-white/95 max-w-4xl mx-auto leading-relaxed font-medium mb-6">
                     Preserving friendships and fostering continued contact among those who have served the IATP
                 </p>
-                <div class="mt-8 text-white/80 text-lg">
+                <p class="text-lg text-white/80 max-w-2xl mx-auto">
+                    Bringing together former IATP delegates to maintain the bonds forged through years of collaboration in aviation excellence
+                </p>
+                <div class="mt-10 inline-block px-6 py-3 bg-white/10 backdrop-blur-md border border-white/30 rounded-full text-white/90 text-base">
+                    <i class="fas fa-calendar-alt mr-2"></i>
                     Issue: April 2023
                 </div>
             </div>
@@ -164,11 +169,18 @@
     </section>
 
     <!-- Introduction Section -->
-    <section class="py-16 bg-white">
-        <div class="max-w-4xl mx-auto px-6 text-center">
-            <p class="text-2xl text-gray-700 leading-relaxed font-medium">
-                The PIONAIRS Association is an independent organization made by former IATP delegates
-            </p>
+    <section class="py-20 bg-gradient-to-b from-white to-gray-50">
+        <div class="max-w-5xl mx-auto px-6">
+            <div class="bg-gradient-to-br from-blue-50 to-cyan-50 rounded-3xl p-12 shadow-xl border border-blue-100">
+                <div class="flex items-center justify-center mb-6">
+                    <div class="w-16 h-16 bg-gradient-to-br from-[#0079c2] to-[#337ab7] rounded-2xl flex items-center justify-center">
+                        <i class="fas fa-info-circle text-3xl text-white"></i>
+                    </div>
+                </div>
+                <p class="text-2xl md:text-3xl text-gray-800 leading-relaxed font-semibold text-center">
+                    The PIONAIRS Association is an independent organization made by former IATP delegates
+                </p>
+            </div>
         </div>
     </section>
 
@@ -819,11 +831,15 @@
             <div class="grid md:grid-cols-4 gap-12 mb-12">
                 <div>
                     <div class="flex items-center space-x-3 mb-6">
-                        <img src="img/IATP-logo.png" alt="IATP Logo" class="h-12 w-auto   ">
+                        <img src="img/IATP-logo.png" alt="IATP Logo" class="h-12 w-auto">
                     </div>
-                    <p class="text-gray-400 leading-relaxed">
-                        The world's leading aviation technical resource sharing platform since 1948.
+                    <p class="text-gray-400 leading-relaxed mb-4">
+                        Recognized worldwide as the aviation industry's trusted expert in technical collaboration and AOG support since 1948.
                     </p>
+                    <div class="flex items-center space-x-2 text-gray-500 text-sm">
+                        <i class="fas fa-shield-alt text-blue-500"></i>
+                        <span>Trusted by 130+ Airlines Globally</span>
+                    </div>
                 </div>
 
                 <div>
@@ -849,16 +865,11 @@
                 <div>
                     <h4 class="font-bold text-lg mb-6">Connect</h4>
                     <div class="flex space-x-4">
-                        <a href="#" class="w-12 h-12 bg-gray-800 rounded-xl flex items-center justify-center hover:bg-[#0079c2] transition-all">
-                            <i class="fab fa-linkedin"></i>
-                        </a>
-                        <a href="#" class="w-12 h-12 bg-gray-800 rounded-xl flex items-center justify-center hover:bg-[#0079c2] transition-all">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a href="#" class="w-12 h-12 bg-gray-800 rounded-xl flex items-center justify-center hover:bg-[#0079c2] transition-all">
-                            <i class="fab fa-youtube"></i>
+                        <a href="#" class="w-12 h-12 bg-gray-800 rounded-xl flex items-center justify-center hover:bg-[#0079c2] transition-all group">
+                            <i class="fab fa-linkedin text-xl group-hover:scale-110 transition-transform"></i>
                         </a>
                     </div>
+                    <p class="text-gray-400 text-sm mt-4">Follow us on LinkedIn for industry insights and updates</p>
                 </div>
             </div>
 
