--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 
                 <!-- Badge with Animation -->
                 <div class="inline-flex items-center space-x-2 bg-white/20 backdrop-blur-md px-6 py-3 rounded-full mb-8 border border-white/30 animate-fade-in-down">
-                    <div class="w-2 h-2 bg-green-400 rounded-full animate-pulse"></div>
+                    <i class="fas fa-award text-white"></i>
                     <span class="text-white font-medium text-sm">Recognized Worldwide Since 1948 </span>
                 </div>
 
