--- a/about.html
+++ b/about.html
@@ -273,7 +273,7 @@
                 <div id="about-our-organization" class="tab-content active">
                     <div class="prose prose-lg max-w-none">
                         <p class="text-gray-700 leading-relaxed mb-6">
-                            The International Airlines Technical Pool (IATP) is a convention of airlines made up of over 140 Member Airlines, 50 "Sponsored" Airlines, and over 45 OEM and service providers (called Associate Members). In the spirit of co-operation, members of the aviation industry gather twice yearly to discuss sharing of resources, reducing costs, while improving operating efficiency. Under its auspices, members "pool" (share) Aircraft Recovery kits, Spare Parts, Equipment, Line Maintenance and Aircraft Engines for both narrow and wide bodies.
+                            <strong>The International Airlines Technical Pool (IATP)</strong> is a convention of airlines made up of over 140 Member Airlines, 50 "Sponsored" Airlines, and over 45 OEM and service providers (called Associate Members). In the spirit of co-operation, members of the aviation industry gather twice yearly to discuss sharing of resources, reducing costs, while improving operating efficiency. Under its auspices, members "pool" (share) Aircraft Recovery kits, Spare Parts, Equipment, Line Maintenance and Aircraft Engines for both narrow and wide bodies.
                         </p>
 
                         <p class="text-gray-700 leading-relaxed mb-6">
@@ -464,7 +464,7 @@
                     <div class="prose prose-lg max-w-none">
                         <div class="relative mb-12">
                             <div class="image-hover-zoom rounded-3xl overflow-hidden shadow-2xl">
-                                <img src="https://images.unsplash.com/photo-1472289065668-ce650ac443d2?w=1600"
+                                <img src="https://images.unsplash.com/photo-1603437873662-dc1f44901825?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                                      alt="Aviation History"
                                      class="w-full h-64 object-cover">
                             </div>
